# Flow

./: .gitignore  PRD_TASKS.md  README.md  TASKS.md  app.py  context_manager.py  feedback.py  flow_ai_router.py  integration.py  list_gemini_models.py  llm_client.py  models.py  prompts.py  pyproject.toml  run_sample.py  test_feedback.py  test_integration.py  test_llm.py  todoList.md  validate_sample.py  validators.py
agents/: allocator.py  base.py  coach.py  conflict.py  constraint.py  parser.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Navigation.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Coach.tsx  Dashboard.tsx  Focus.tsx  Home.tsx  Settings.tsx
frontend/src/types/: index.ts
memory/: local_memory.py
mobile-new/: App.tsx  app.json  package-lock.json  package.json
mobile-new/__tests__/: SettingsScreen.test.tsx  api.test.js  api.test.ts  integration.test.js  routing.test.js  ui-completion.test.js
mobile-new/app/: _layout.tsx  coach.tsx  dashboard.tsx  focus.tsx  home.tsx  index.tsx  planner.tsx  settings.tsx
mobile-new/components/: bottom-nav.tsx
mobile-new/components/ui/: icon-symbol.tsx
mobile-new/constants/: theme.ts
mobile-new/src/components/: ClassesList.tsx  EventList.tsx  FocusTimer.tsx  GoalsList.tsx  goals.tsx  (+4 more)
mobile-new/types/: theme.ts
sample_data/: memory.json  sample.json
schemas/: preferences_schema.json  schedule_schema.json  user_schema.json
tests/: test_feedback.py  test_integration.py  test_schedule.py  test_scheduler.py
(+12 files in other folders)
