[tool.poetry]
name = "life-scheduler"
version = "0.1.0"
description = "Copilot backend: AI scheduling & productivity assistant (Phase 1 scaffold)"
authors = ["<you>"]

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.3.0"
python-dotenv = "^1.0.0"
jsonschema = "^4.19.0"
pydantic = "^2.4.2"
Flask = "^2.3.2"
Flask-Cors = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"